Add complete backend implementation with AI services
- Implemented VisionService (Claude Sonnet 4.5) for image analysis
- Implemented GroqService (Llama 3.3 70B) for fast filter extraction
- Implemented LettaService for user memory and preferences
- Implemented ElasticClient with semantic search (ELSER embeddings)
- Implemented SupabaseClient for database operations
- Added comprehensive test suite (unit + integration + real API tests)
- Added demo_backend.py for capability demonstration
- Fixed main.py compatibility issues (commented out placeholders)
- All core features working: search, listing optimization, swipe tracking

✅ All tests passing with real API keys
✅ Backend proven working with demo script

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,10 +6,10 @@ pydantic==2.5.3
 pydantic-settings==2.1.0
 
 # AI & ML
-anthropic==0.18.1
-groq==0.4.2
-letta==0.2.9
-openai==1.12.0
+anthropic>=0.49.0
+groq>=0.4.2
+letta>=0.13.0
+openai>=1.12.0
 
 # Fetch.ai Agents
 uagents==0.12.0
@@ -21,7 +21,7 @@ supabase==2.3.4
 psycopg2-binary==2.9.9
 
 # Tool Management
-toolhouse==0.1.5
+toolhouse==1.4.0
 
 # Voice
 requests==2.31.0
