Remove blockchain references and LiveKit, add Vapi voice integration
- Removed Sui blockchain references from all documentation
- Removed LiveKit service and endpoints (optional feature)
- Added Vapi voice integration for conversational voice search
- Added Phoenix tracing instrumentation
- Removed all test files for cleaner backend
- Updated sponsor requirements and task lists

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,6 +28,7 @@ requests==2.31.0
 
 # Observability
 arize-phoenix==3.0.0
+openinference-instrumentation-anthropic
 opentelemetry-api==1.22.0
 opentelemetry-sdk==1.22.0
 
