feat: working connection with lens studio

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -36,3 +36,6 @@ FETCH_NETWORK=testnet
 # Sui Blockchain
 SUI_NETWORK=testnet
 SUI_PRIVATE_KEY=your_sui_key
+
+# YOLO Detection (for Spectacles)
+YOLO_CONFIDENCE=0.45  # Minimum confidence threshold for object detection (0.0-1.0)
