Integrate wishlist fixes with make-better-home and AR branches
- Fixed listing ID format (removed duplicate 'listing-' prefix)
- Added mock listings loader in supabase_client.py
- Updated mock data with correct image paths
- Added search results filtering in swipe page
- Added generate_mock_listings.py with 8 listings using real images
- Fixed Next.js Image sizes prop warnings in wishlist page
- Integrated with YOLO service from AR branch
- Integrated with new UI from make-better-home branch

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,6 +20,9 @@ LETTA_BASE_URL=https://api.letta.ai
 # Vapi (voice)
 VAPI_API_KEY=your_vapi_key
 
+# Google Maps (geocoding for dynamic radius search)
+GOOGLE_MAPS_API_KEY=your_google_maps_key
+
 # LiveKit (video tours)
 LIVEKIT_API_KEY=your_livekit_key
 LIVEKIT_API_SECRET=your_livekit_secret
